@@ -4,8 +4,9 @@ linux (3.10~rc7-1~exp2) UNRELEASED; urgency=low
   * debian/patches: Add DEP-3 headers (From, Subject, Forwarded/Origin)
     for most patches
   * aufs: Add DEP-3 headers to generated/copied patches
-  * [rt] Make genpatch.py work with upstream patch series as well as git
+  * [rt] genpatch.py: Work with upstream patch series as well as git
     - Fold convert-series into genpatch.py
+  * [rt] genpatch.py: Add Origin header to all patches
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100
 
